[package]
name = "rayon-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc_rayon = { path = "../" }
cgmath = "0.18"
docopt = "1"
fixedbitset = "0.5.0"
glium = "0.34"
once_cell = "1.17.1"
rand = "0.8"
rand_xorshift = "0.3"
regex = "1"
winit = "0.29"

[dependencies.serde]
version = "1.0.85"
features = ["derive"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[dev-dependencies]
doc-comment = "0.3"
num = "0.4"
